Bengan Weapon Throw

--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,19 +133,18 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/Pierre
+LastLevel=/Game/FirstPersonBP/Maps/Paul
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/UI/MenuPause.MenuPause
+CleanShutdown=True
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
-WindowSize=X=1281.600 Y=721.600
+WindowSize=X=1281.000 Y=721.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -162,7 +161,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../UnrealFPS/FastFPSProj/Content/FirstPersonBP/Maps
+UNR=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/FirstPersonBP/Maps
 BRUSH=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBX=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
 FBXAnim=../../../../../Unreal Projects/UnrealFPS/FastFPSProj/Content/
@@ -984,11 +983,17 @@ DistCurveEditor.TimeStamp=2020.12.06-23.07.03
 DistCurveEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2020.12.06-23.07.29
 TextureEditor.LastCompileMethod=Unknown
+WorldBrowser.TimeStamp=2020.12.06-23.07.35
+WorldBrowser.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2020.12.06-23.07.27
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2020.12.06-23.07.20
+PinnedCommandList.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/Pierre
-MRUItem1=/Game/FirstPersonBP/Maps/MainMenu
-MRUItem2=/Game/FirstPersonBP/Maps/Paul
+MRUItem0=/Game/FirstPersonBP/Maps/Paul
+MRUItem1=/Game/FirstPersonBP/Maps/Pierre
+MRUItem2=/Game/FirstPersonBP/Maps/MainMenu
 MRUItem3=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [DetailCustomWidgetExpansion]
@@ -1065,14 +1070,14 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.Dash,InputS
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
-CameraComponent=CameraComponent.PostProcess.Lens
+CameraComponent=CameraComponent.PostProcess.Lens,
 CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,
 SceneComponent=CameraComponent.PostProcess.Lens
-K2Node_VariableGet=CameraComponent.PostProcess.Lens,
-FirstPersonCharacter_C=CameraComponent.PostProcess.Lens,
-PropertyWrapper=CameraComponent.PostProcess.Lens,
+K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
+FirstPersonCharacter_C=SphereComponent.Collision.Collision,
+PropertyWrapper=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 Nombre_Dash_C=CameraComponent.PostProcess.Lens,
-K2Node_VariableSet=CameraComponent.PostProcess.Lens,
+K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 Ui_C=CameraComponent.PostProcess.Lens,
 MovementComponent=
 Zone_Damage_C=
@@ -1080,6 +1085,8 @@ BoxComponent=BoxComponent.Collision.Collision,
 MenuPause_C=
 PlayerController=CameraComponent.PostProcess.Lens,
 MainMenu_C=
+SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
+SphereComponent=SphereComponent.Collision.Collision,
 
 [DetailCategories]
 FirstPersonCharacter_C.TransformCommon=True
@@ -1776,6 +1783,21 @@ VerticalBox.Performance=True
 VerticalBox.Clipping=True
 VerticalBox.Navigation=True
 VerticalBox.Localization=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+SkeletalMeshSocket.Socket Parameters=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1784,25 +1806,26 @@ InputSettings=True
 EditorStyleSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/MainMenu
-MRUItem1=/Game/FirstPersonBP/Maps/Pierre
-MRUItem2=/Game/FirstPersonBP/Maps/MainMenu
-MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem4=/Game/UI/MenuPause
-MRUItem5=/Game/FirstPersonBP/Maps/Paul
-MRUItem6=/Game/FirstPersonBP/Widgets/Ui
-MRUItem7=/Game/FirstPersonBP/Blueprints/Zone_Damage
-MRUItem8=/Game/FirstPersonBP/Widgets/Image/BarreShield
-MRUItem9=/Game/FirstPersonBP/Widgets/Image/BarreVie
-MRUItem10=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem11=/Game/FirstPersonBP/Widgets/Nombre_Dash
-MRUItem12=/Game/FirstPersonBP/Widgets/Shield
-MRUItem13=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem14=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem15=/Game/AC_CameraSway
-MRUItem16=/Game/Particules/Dash_Particules
-MRUItem17=/Game/Particules/NewParticleSystem
-MRUItem18=/Game/Materials/Dash_Particules
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/FirstPersonBP/Maps/Paul
+MRUItem2=/Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms_Skeleton
+MRUItem3=/Game/UI/MainMenu
+MRUItem4=/Game/FirstPersonBP/Maps/Pierre
+MRUItem5=/Game/FirstPersonBP/Maps/MainMenu
+MRUItem6=/Game/UI/MenuPause
+MRUItem7=/Game/FirstPersonBP/Widgets/Ui
+MRUItem8=/Game/FirstPersonBP/Blueprints/Zone_Damage
+MRUItem9=/Game/FirstPersonBP/Widgets/Image/BarreShield
+MRUItem10=/Game/FirstPersonBP/Widgets/Image/BarreVie
+MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem12=/Game/FirstPersonBP/Widgets/Nombre_Dash
+MRUItem13=/Game/FirstPersonBP/Widgets/Shield
+MRUItem14=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem15=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem16=/Game/AC_CameraSway
+MRUItem17=/Game/Particules/Dash_Particules
+MRUItem18=/Game/Particules/NewParticleSystem
+MRUItem19=/Game/Materials/Dash_Particules
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -1816,13 +1839,14 @@ MRUItem18=/Game/Materials/Dash_Particules
 /Game/FirstPersonBP/Blueprints/Zone_Damage.Zone_Damage=1
 /Game/FirstPersonBP/Maps/Pierre.Pierre:PersistentLevel.Pierre=1
 /Game/UI/MainMenu.MainMenu=0
+/Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms_Skeleton.SK_Mannequin_Arms_Skeleton=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[29]\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Size.StartSize.Distribution\" "
@@ -1838,14 +1862,14 @@ ParticleModuleLocationBase="\"Object.Location.StartLocation\" \"Object.Location.
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.Bloom1Tint\" \"Object.PostProcess.PostProcessSettings.Bloom2Tint\" \"Object.PostProcess.PostProcessSettings.Bloom3Tint\" \"Object.PostProcess.PostProcessSettings.Bloom4Tint\" \"Object.PostProcess.PostProcessSettings.Bloom5Tint\" \"Object.PostProcess.PostProcessSettings.Bloom6Tint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.WeightedBlendables\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-ActorComponent=
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
 FirstPersonCharacter_C=
 Character=
 Pawn=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
@@ -1863,6 +1887,13 @@ HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Trans
 Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Collision.BodyInstance\" "
+PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+SphereComponent="\"Object.Collision.BodyInstance\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -2064,4 +2095,36 @@ DeleteVariableInUse_Warning=False
 [WorldBrowser]
 DisplayPaths=False
 DisplayActorsCount=False
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletonEditor",Commands=)
+Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 
