--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,16 +136,16 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/Pierre
+LastLevel=/Game/FirstPersonBP/Maps/GameOver
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/UI/MenuPause.MenuPause
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/UI/GameOver.GameOver
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
-WindowSize=X=1281.600 Y=721.600
+WindowSize=X=1283.200 Y=723.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -966,10 +966,10 @@ SceneOutliner.TimeStamp=2020.12.07-11.40.48
 SceneOutliner.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2020.12.07-11.40.30
 HierarchicalLODOutliner.LastCompileMethod=External
-Voice.TimeStamp=2020.12.06-23.07.34
-Voice.LastCompileMethod=Unknown
-MovieSceneCapture.TimeStamp=2020.12.06-23.07.17
-MovieSceneCapture.LastCompileMethod=Unknown
+Voice.TimeStamp=2020.12.07-11.40.59
+Voice.LastCompileMethod=External
+MovieSceneCapture.TimeStamp=2020.12.07-11.40.39
+MovieSceneCapture.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2020.12.07-11.40.27
 ExternalImagePicker.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2020.12.07-11.40.15
@@ -984,12 +984,15 @@ DistCurveEditor.TimeStamp=2020.12.06-23.07.03
 DistCurveEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2020.12.06-23.07.29
 TextureEditor.LastCompileMethod=Unknown
+WorldBrowser.TimeStamp=2020.12.07-11.41.01
+WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/Pierre
-MRUItem1=/Game/FirstPersonBP/Maps/MainMenu
-MRUItem2=/Game/FirstPersonBP/Maps/Paul
-MRUItem3=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/FirstPersonBP/Maps/GameOver
+MRUItem1=/Game/FirstPersonBP/Maps/Paul
+MRUItem2=/Game/FirstPersonBP/Maps/MainMenu
+MRUItem3=/Game/FirstPersonBP/Maps/Pierre
+MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
@@ -1069,7 +1072,7 @@ CameraComponent=CameraComponent.PostProcess.Lens
 CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,
 SceneComponent=CameraComponent.PostProcess.Lens
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,
-FirstPersonCharacter_C=CameraComponent.PostProcess.Lens,
+FirstPersonCharacter_C=
 PropertyWrapper=CameraComponent.PostProcess.Lens,
 Nombre_Dash_C=CameraComponent.PostProcess.Lens,
 K2Node_VariableSet=CameraComponent.PostProcess.Lens,
@@ -1776,6 +1779,14 @@ VerticalBox.Performance=True
 VerticalBox.Clipping=True
 VerticalBox.Navigation=True
 VerticalBox.Localization=True
+GameOver_C.Tick=True
+GameOver_C.Replication=True
+GameOver_C.Actor=True
+GameOver_C.Input=True
+MainMenu_C.Tick=True
+MainMenu_C.Replication=True
+MainMenu_C.Actor=True
+MainMenu_C.Input=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1784,28 +1795,29 @@ InputSettings=True
 EditorStyleSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/MainMenu
-MRUItem1=/Game/FirstPersonBP/Maps/Pierre
+MRUItem0=/Game/FirstPersonBP/Maps/GameOver
+MRUItem1=/Game/FirstPersonBP/Maps/Paul
 MRUItem2=/Game/FirstPersonBP/Maps/MainMenu
-MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem4=/Game/UI/MenuPause
-MRUItem5=/Game/FirstPersonBP/Maps/Paul
-MRUItem6=/Game/FirstPersonBP/Widgets/Ui
-MRUItem7=/Game/FirstPersonBP/Blueprints/Zone_Damage
-MRUItem8=/Game/FirstPersonBP/Widgets/Image/BarreShield
-MRUItem9=/Game/FirstPersonBP/Widgets/Image/BarreVie
-MRUItem10=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem11=/Game/FirstPersonBP/Widgets/Nombre_Dash
-MRUItem12=/Game/FirstPersonBP/Widgets/Shield
-MRUItem13=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem14=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem15=/Game/AC_CameraSway
-MRUItem16=/Game/Particules/Dash_Particules
-MRUItem17=/Game/Particules/NewParticleSystem
-MRUItem18=/Game/Materials/Dash_Particules
+MRUItem3=/Game/UI/GameOver
+MRUItem4=/Game/FirstPersonBP/Maps/Pierre
+MRUItem5=/Game/UI/MainMenu
+MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem7=/Game/UI/MenuPause
+MRUItem8=/Game/FirstPersonBP/Widgets/Ui
+MRUItem9=/Game/FirstPersonBP/Blueprints/Zone_Damage
+MRUItem10=/Game/FirstPersonBP/Widgets/Image/BarreShield
+MRUItem11=/Game/FirstPersonBP/Widgets/Image/BarreVie
+MRUItem12=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem13=/Game/FirstPersonBP/Widgets/Nombre_Dash
+MRUItem14=/Game/FirstPersonBP/Widgets/Shield
+MRUItem15=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem16=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem17=/Game/AC_CameraSway
+MRUItem18=/Game/Particules/Dash_Particules
+MRUItem19=/Game/Particules/NewParticleSystem
 
 [AssetEditorToolkitTabLocation]
-/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
+/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
 /Game/Particules/Dash_Particules.Dash_Particules=1
 /Game/Materials/Dash_Particules.Dash_Particules=1
 /Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode=1
@@ -1816,6 +1828,7 @@ MRUItem18=/Game/Materials/Dash_Particules
 /Game/FirstPersonBP/Blueprints/Zone_Damage.Zone_Damage=1
 /Game/FirstPersonBP/Maps/Pierre.Pierre:PersistentLevel.Pierre=1
 /Game/UI/MainMenu.MainMenu=0
+/Game/FirstPersonBP/Maps/GameOver.GameOver:PersistentLevel.GameOver=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
