--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,12 +136,12 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/GameOver
+LastLevel=/Game/FirstPersonBP/Maps/Paul
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/UI/MenuPause.MenuPause
-OpenAssetsAtExit=/Game/UI/GameOver.GameOver
+CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/Zone_Damage.Zone_Damage
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=360.000
@@ -988,10 +988,10 @@ WorldBrowser.TimeStamp=2020.12.07-11.41.01
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/GameOver
-MRUItem1=/Game/FirstPersonBP/Maps/Paul
-MRUItem2=/Game/FirstPersonBP/Maps/MainMenu
-MRUItem3=/Game/FirstPersonBP/Maps/Pierre
+MRUItem0=/Game/FirstPersonBP/Maps/Paul
+MRUItem1=/Game/FirstPersonBP/Maps/Pierre
+MRUItem2=/Game/FirstPersonBP/Maps/GameOver
+MRUItem3=/Game/FirstPersonBP/Maps/MainMenu
 MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [DetailCustomWidgetExpansion]
@@ -1071,20 +1071,21 @@ ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,Parti
 CameraComponent=CameraComponent.PostProcess.Lens,
 CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,
 SceneComponent=CameraComponent.PostProcess.Lens
-K2Node_VariableGet=CameraComponent.PostProcess.Lens,
-FirstPersonCharacter_C=
-PropertyWrapper=CameraComponent.PostProcess.Lens,
+K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,K2Node_CallFunction.Inputs.InputArgument0,
+FirstPersonCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,K2Node_CallFunction.Inputs.InputArgument0,
+PropertyWrapper=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,K2Node_CallFunction.Inputs.InputArgument0,
 Nombre_Dash_C=CameraComponent.PostProcess.Lens,
 K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 Ui_C=CameraComponent.PostProcess.Lens,
 MovementComponent=
-Zone_Damage_C=
+Zone_Damage_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,
 MenuPause_C=
 PlayerController=CameraComponent.PostProcess.Lens,
 MainMenu_C=
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 SphereComponent=SphereComponent.Collision.Collision,
+K2Node_CallFunction=K2Node_CallFunction.Inputs.InputArgument0,
 
 [DetailCategories]
 FirstPersonCharacter_C.TransformCommon=True
@@ -1789,6 +1790,13 @@ MainMenu_C.Tick=True
 MainMenu_C.Replication=True
 MainMenu_C.Actor=True
 MainMenu_C.Input=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+Paul_C.Tick=True
+Paul_C.Replication=True
+Paul_C.Actor=True
+Paul_C.Input=True
+Zone_Damage_C.Default=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1797,16 +1805,16 @@ InputSettings=True
 EditorStyleSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Maps/GameOver
+MRUItem0=/Game/FirstPersonBP/Blueprints/Zone_Damage
 MRUItem1=/Game/FirstPersonBP/Maps/Paul
-MRUItem2=/Game/FirstPersonBP/Maps/MainMenu
-MRUItem3=/Game/UI/GameOver
-MRUItem4=/Game/FirstPersonBP/Maps/Pierre
-MRUItem5=/Game/UI/MainMenu
-MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem7=/Game/UI/MenuPause
-MRUItem8=/Game/FirstPersonBP/Widgets/Ui
-MRUItem9=/Game/FirstPersonBP/Blueprints/Zone_Damage
+MRUItem2=/Game/FirstPersonBP/Maps/Pierre
+MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem4=/Game/UI/GameOver
+MRUItem5=/Game/UI/MenuPause
+MRUItem6=/Game/FirstPersonBP/Maps/GameOver
+MRUItem7=/Game/FirstPersonBP/Maps/MainMenu
+MRUItem8=/Game/UI/MainMenu
+MRUItem9=/Game/FirstPersonBP/Widgets/Ui
 MRUItem10=/Game/FirstPersonBP/Widgets/Image/BarreShield
 MRUItem11=/Game/FirstPersonBP/Widgets/Image/BarreVie
 MRUItem12=/Engine/EditorBlueprintResources/StandardMacros
@@ -1831,13 +1839,16 @@ MRUItem19=/Game/Particules/NewParticleSystem
 /Game/FirstPersonBP/Maps/Pierre.Pierre:PersistentLevel.Pierre=1
 /Game/UI/MainMenu.MainMenu=0
 /Game/FirstPersonBP/Maps/GameOver.GameOver:PersistentLevel.GameOver=0
+/Game/UI/MenuPause.MenuPause=0
+/Game/UI/GameOver.GameOver=0
+/Game/FirstPersonBP/Maps/Paul.Paul:PersistentLevel.Paul=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[29]\" "
-Object="\"Object.Collision.BodyInstance\" "
+Object=
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Size.StartSize.Distribution\" "
@@ -1872,8 +1883,8 @@ Ui_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.Rend
 UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume=
+Brush=
 HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
