--- a/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FastFPSProj/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -114,7 +114,7 @@ CameraSpeed=5
 RotGridEnabled=False
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -136,29 +136,6 @@ ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
-SequenceBrowser.ActiveTypeFilters=
-SequenceBrowser.EnabledTypeFilters=
-SequenceBrowser.ActiveFrontendFilters=
-SequenceBrowser.EnabledFrontendFilters=
-SequenceBrowser.ThumbnailSizeScale=0.100000
-SequenceBrowser.CurrentViewType=2
-SequenceBrowser.HiddenColumns=Compression Ratio
-SequenceBrowser.HiddenColumns=Compressed Size (KB)
-SequenceBrowser.HiddenColumns=FrameRate
-SequenceBrowser.HiddenColumns=ImportFileFramerate
-SequenceBrowser.HiddenColumns=ImportResampleFramerate
-SequenceBrowser.HiddenColumns=NumFrames
-SequenceBrowser.HiddenColumns=AdditiveAnimType
-SequenceBrowser.HiddenColumns=RetargetSource
-SequenceBrowser.HiddenColumns=Interpolation
-SequenceBrowser.HiddenColumns=bEnableRootMotion
-SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
-SequenceBrowser.HiddenColumns=SequenceLength
-SequenceBrowser.HiddenColumns=Skeleton
-SequenceBrowser.HiddenColumns=ParentAsset
-SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
-SequenceBrowser.HiddenColumns=CurveNameList
-SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/Paul
@@ -1016,10 +993,6 @@ SkeletonEditor.TimeStamp=2020.12.06-23.07.27
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2020.12.06-23.07.20
 PinnedCommandList.LastCompileMethod=Unknown
-PortalProxies.TimeStamp=2020.12.06-23.07.21
-PortalProxies.LastCompileMethod=Unknown
-AnimationEditor.TimeStamp=2020.12.06-23.06.49
-AnimationEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/Paul
@@ -1106,13 +1079,13 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindin
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
 CameraComponent=CameraComponent.PostProcess.Lens,
 CapsuleComponent=CapsuleComponent.Physics.ConstraintsGroup,
-SceneComponent=CameraComponent.PostProcess.Lens,
-K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
-FirstPersonCharacter_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
-PropertyWrapper=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
+SceneComponent=CameraComponent.PostProcess.Lens
+K2Node_VariableGet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
+FirstPersonCharacter_C=SphereComponent.Collision.Collision,
+PropertyWrapper=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 Nombre_Dash_C=CameraComponent.PostProcess.Lens,
-K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
-Ui_C=
+K2Node_VariableSet=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
+Ui_C=CameraComponent.PostProcess.Lens,
 MovementComponent=
 Zone_Damage_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,
@@ -1121,8 +1094,6 @@ PlayerController=CameraComponent.PostProcess.Lens,
 MainMenu_C=
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 SphereComponent=SphereComponent.Collision.Collision,
-Weapon_BP_C=CameraComponent.PostProcess.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
-SkeletalMesh=SkeletalMesh.ImportSettings.Mesh,
 
 [DetailCategories]
 FirstPersonCharacter_C.TransformCommon=True
@@ -1842,120 +1813,6 @@ SphereComponent.Tags=True
 SphereComponent.ComponentReplication=True
 SphereComponent.Cooking=True
 SphereComponent.Events=True
-SkeletalMeshActor.TransformCommon=True
-SkeletalMeshActor.Animation=True
-SkeletalMeshActor.Mesh=True
-SkeletalMeshActor.Materials=True
-SkeletalMeshActor.Clothing=True
-SkeletalMeshActor.Physics=True
-SkeletalMeshActor.Collision=True
-SkeletalMeshActor.MasterPoseComponent=True
-SkeletalMeshActor.Lighting=True
-SkeletalMeshActor.ClothingSimulation=True
-SkeletalMeshActor.Rendering=True
-SkeletalMeshActor.SkinWeights=True
-SkeletalMeshActor.Navigation=True
-SkeletalMeshActor.VirtualTexture=True
-SkeletalMeshActor.Tags=True
-SkeletalMeshActor.Activation=True
-SkeletalMeshActor.Cooking=True
-SkeletalMeshActor.Replication=True
-SkeletalMeshActor.Input=True
-SkeletalMeshActor.Actor=True
-Weapon_BP_C.Tick=True
-Weapon_BP_C.Replication=True
-Weapon_BP_C.Rendering=True
-Weapon_BP_C.Collision=True
-Weapon_BP_C.Actor=True
-Weapon_BP_C.Input=False
-Weapon_BP_C.TransformCommon=True
-ChildActorComponent.Variable=True
-ChildActorComponent.TransformCommon=True
-ChildActorComponent.Sockets=True
-ChildActorComponent.ChildActorComponent=True
-ChildActorComponent.Rendering=True
-ChildActorComponent.Tags=True
-ChildActorComponent.ComponentReplication=True
-ChildActorComponent.Cooking=True
-ChildActorComponent.Events=True
-Zone_Damage_C.Default=True
-SkeletalMeshComponent.SkeletalMesh=False
-SceneComponent.Variable=True
-SceneComponent.Sockets=True
-SceneComponent.ComponentReplication=True
-SceneComponent.Events=True
-K2Node_InputTouch.Input=True
-Hit_Test_C.TransformCommon=True
-Hit_Test_C.Rendering=True
-Hit_Test_C.Replication=True
-Hit_Test_C.Collision=True
-Hit_Test_C.Input=True
-Hit_Test_C.Actor=True
-Hit_Test_C.Tick=True
-K2Node_CustomEvent.GraphNodeDetail=True
-K2Node_CustomEvent.Graph=True
-K2Node_CustomEvent.Inputs=True
-Image.Layout=True
-Image.Appearance=True
-Image.Accessibility=True
-Image.Behavior=True
-Image.Render Transform=True
-Image.Performance=True
-Image.Clipping=True
-Image.Navigation=True
-Image.Localization=True
-Image.Events=True
-HitActor_Test_C.Tick=True
-HitActor_Test_C.Replication=True
-HitActor_Test_C.Rendering=True
-HitActor_Test_C.Collision=True
-HitActor_Test_C.Actor=True
-HitActor_Test_C.Input=True
-Weapon_BP_C.LOD=False
-Weapon_BP_C.Cooking=False
-SkeletalMeshComponent.Optimization=False
-AnimSequence.Animation=True
-AnimSequence.AdditiveSettings=True
-AnimSequence.Compression=True
-AnimSequence.RootMotion=True
-AnimSequence.ImportSettings=True
-AnimSequence.Transform=True
-AnimSequence.Miscellaneous=True
-AnimSequence.File Path=True
-AnimSequence.MetaData=True
-AnimSequence.Thumbnail=True
-SkeletalMesh.Material Slots=True
-SkeletalMesh.LODCustomMode=True
-SkeletalMesh.LOD0=True
-SkeletalMesh.LODSettings=True
-SkeletalMesh.Clothing=True
-SkeletalMesh.Mesh=True
-SkeletalMesh.Physics=True
-SkeletalMesh.SkeletalMesh=True
-SkeletalMesh.Lighting=True
-SkeletalMesh.ImportSettings=True
-SkeletalMesh.Animation=True
-SkeletalMesh.SkinWeights=True
-SkeletalMesh.Sampling=True
-PersonaPreviewSceneDescription.Animation=True
-PersonaPreviewSceneDescription.Animation Blueprint=True
-AssetViewerSettings.Settings=True
-FirstPersonCharacter_C.Weapon=True
-CameraShakeFiring_C.CameraShake=True
-CameraShakeFiring_C.Oscillation=True
-CameraShakeFiring_C.AnimShake=True
-RotatingMovementComponent.Variable=True
-RotatingMovementComponent.Sockets=True
-RotatingMovementComponent.RotatingComponent=True
-RotatingMovementComponent.PlanarMovement=True
-RotatingMovementComponent.MovementComponent=True
-RotatingMovementComponent.Tags=True
-RotatingMovementComponent.ComponentReplication=True
-RotatingMovementComponent.Activation=True
-RotatingMovementComponent.Cooking=True
-RotatingMovementComponent.Events=True
-Weapon_BP_C.Default=True
-HitActor_Test_C.TransformCommon=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2014,7 +1871,7 @@ bHideUnrelatedNodes=False
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[29]\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Size.StartSize.Distribution\" "
@@ -2036,18 +1893,18 @@ FirstPersonCharacter_C=
 Character=
 Pawn=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[5]\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-Ui_C=
-UserWidget=
-BoxComponent="\"Object.Collision.BodyInstance\" "
+Ui_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
+BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume=
 Brush=
@@ -2060,11 +1917,8 @@ SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[5]\" "
+SphereComponent="\"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
-Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Shear\" "
-CameraShakeFiring_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.LocOscillation\" \"Object.Oscillation.FOVOscillation\" "
-CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.LocOscillation\" \"Object.Oscillation.FOVOscillation\" "
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -2195,12 +2049,8 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [PlacementMode]
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Hit_Test.Hit_Test;
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Weapon_BP.Weapon_BP;
-RecentlyPlaced=/Game/FirstPerson/FPWeapon/Mesh/SK_FPGun.SK_FPGun;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Zone_Damage.Zone_Damage;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Particules/Dash_Particules.Dash_Particules;
 
 [CascadeEditor]
@@ -2302,14 +2152,4 @@ bTimelineDisplayCurveKeys=False
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
-Contexts=(Name="SkeletalMeshEditor",Commands=)
-Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
-Contexts=(Name="AnimationEditor",Commands=)
-Contexts=(Name="AnimationEditor.Viewport0",Commands=)
-
-[DetailCategoriesAdvanced]
-Weapon_BP_C.Collision=True
-Weapon_BP_C.Tick=False
-Weapon_BP_C.Replication=False
-Weapon_BP_C.Actor=True
 
